<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llayout_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:paddingLeft="@dimen/space_60"
    android:paddingRight="@dimen/space_60"
    android:paddingTop="@dimen/space_20"
    android:background="@drawable/bg_dialog_pop2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/label_imperfect_info"
        android:textColor="#d41a1a"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btn_perfect_info"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:background="@drawable/bg_button"
            android:text="@string/btn_perfect_info2"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <View
            android:layout_width="40dp"
            android:layout_height="0dp"></View>

        <Button
            android:id="@+id/btn_after"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:background="@drawable/bg_button"
            android:text="@string/btn_work_later"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
