<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/theme_bg_blue"><!--drawable/back_ground-->

    <LinearLayout
        android:id="@+id/llayout_title_bar_left"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/space_20"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/img_size_27"
            android:layout_height="@dimen/img_size_51"
            android:scaleType="centerCrop"
            android:src="@mipmap/back_png" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_18"
            android:text="@string/layout_base_button_text_back"
            android:textColor="@color/white"
            android:textSize="@dimen/text_29" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_bar_center_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/title_default"
        android:textColor="@color/white"
        android:textSize="@dimen/text_36" />

    <TextView
        android:id="@+id/txt_title_bar_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/space_30"
        android:gravity="center"
        android:text="@string/layout_base_button_text_register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_29" />
</RelativeLayout>