<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_leftmenu_cgn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlayout_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/left_click_item"
        android:clickable="true"
        android:paddingLeft="30dp">

        <ImageView
            android:id="@+id/img_cgn_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/icon_phone" />

        <TextView
            style="@style/HomeBtnTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/img_cgn_phone"
            android:text="@string/leftmenu_phone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="110dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_setting"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/left_click_item"
        android:paddingLeft="30dp">

        <ImageView
            android:id="@+id/img_cgn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/icon_setting" />

        <TextView
            style="@style/HomeBtnTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/img_cgn_setting"
            android:text="@string/leftmenu_setting" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="110dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_share"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/left_click_item"
        android:paddingLeft="30dp">

        <ImageView
            android:id="@+id/img_cgn_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/icon_share" />

        <TextView
            style="@style/HomeBtnTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/img_cgn_driver"
            android:text="分享" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="110dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_qrcode"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/left_click_item"
        android:paddingLeft="30dp">

        <ImageView
            android:id="@+id/img_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/icon_qrcode" />

        <TextView
            style="@style/HomeBtnTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/img_qrcode"
            android:text="我的二维码" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="110dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>
</LinearLayout>